Changed the Main Stage to fade in on program start (Not sure if I will keep it or expand it to other stages).
Changed "Set Season + Episode" to default the fields to the current season & episode (If found, otherwise defaults to old behaviour).
Changed how the stages fading in/out work. Also added it for Settings, About box, & Change Box.

Additions:
Made an Abstract Language class and use that in LanguageHandler to load the languages.
Added Option to have the files stored in AppData or at the location of the Jar.
Added option (Programmer option, Will default to true until Beta) to Toggle DevMode while program is running.
Added ability to close the program before it is fully started.
*Fully* commented everything. Please tell me if anything needs to be corrected / added.
Added fields in settings to directly change 'Update Time' (& removed the old button for it) & directory timeout without opening another Stage.
Added UI Settings to allow parent stages to be clicked (Only currently available with Settings) + unlock stage movement (Both settings are locked together, As it would be pointless to have one without the other).
Added setting to disable automatic show rechecking.
Added slight delay when moving the stage to prevent unintentionally moving it.
Added a Main Comment to each Class, explaining the basic use of it. They still need more work, Some are quite basic.
Added Button to clear the text on the main stage. It's hidden until you type something.
Added the Logo as the background on the About stage.
Added Custom ContextMenu to the search box, Which fixes the clear button not appearing when using it to paste, or not disappearing when using it to cut everything.
Added Settings Button to UnHide shows. (Under "Show" tab)
Added ability to set the language as default during startup.
Added ability to set the default user during startup.
Added Exit button to Settings Add User.
Added ability to export Program Related Settings (All, Program Settings, Users, or Directories).